# ai_assistant

./: .gitignore  README.md  pyproject.toml
src/: DSPY_NEWVER.ipynb  TEXT_TO_SPEECH.ipynb  agent_tool_autogen.py  autoagent.py  autogen_doing_ml.ipynb  basic_rag_dspy.py  chat_agent.py  chat_agent_langchain.py  chat_template.py  chatgpt.py  coder_agent.py  coder_autogen.py  connet_to_ollama_server.py  create_chat.py  dspy_gemma.ipynb  dspy_llama.ipynb  dspy_local.py  gpt2xl.py  local_agents.py  local_llm_autogen.py  ollama_chain.py  ollama_langchain.py  ollama_python.py  openai_agent.py  rag_with_agents.py  serve.py  serve_langchain.py  streamlit_ui.py  streamlit_ui_BROKEN.py  test_autogen_rag.ipynb  text_to_speech_pytorch.py  text_to_speech_ver1.ipynb
src/.cache/41/: cache.db
src/.cache/42/: cache.db
src/ai_assistant/archive/: dspy_gemma.ipynb  local_llm_autogen.py  rag_with_autogen_BROKEN.py  serve_langchain.py
src/ai_assistant/autogen_code/: coder_autogen.py  test_autogen_rag_BROKEN.ipynb
src/ai_assistant/dspy_code/: DSPY_VER1.ipynb  dspy_local_llm.py
src/ai_assistant/langchain_code/: chatgpt_langchain.py  langchain_rag.py  langgraph_bot.py  rag_pipeline.py  react_agent.py
src/ai_assistant/models/: get_llm.py
src/ai_assistant/ollama_code/: llama3.py
src/ai_assistant/utils/: rag_utils.py
src/archive/: dspy_llama.ipynb  rag_langchain.py  serve_langchain.py
src/tmp/db/: chroma.sqlite3
